--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "@types/node": "^18.18.0",
     "@typescript-eslint/eslint-plugin": "7.2.0",
     "@typescript-eslint/parser": "7.2.0",
+    "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-promise": "^6.1.1",
@@ -50,6 +51,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.36",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.4.2"
   }
 }
