--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -25,7 +25,8 @@
     ],
     "baseUrl": "./src",
     "paths": {
-      "@/*": ["./app/*"]
+      "@/*": ["./app/*"],
+      "@environment": ["src/environment/environment.ts"]
     }
   },
   "angularCompilerOptions": {
