--- a/client/angular.json
+++ b/client/angular.json
@@ -34,7 +34,10 @@
             ],
             "scripts": [],
             "server": "src/main.server.ts",
-            "prerender": true,
+            "prerender": {
+              "discoverRoutes": false,
+              "routesFile": "prerender_routes.txt"
+            },
             "ssr": {
               "entry": "server.ts"
             }
