--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.0",
-    "@directus/sdk": "^15.0.3",
     "express": "^4.18.2",
+    "ngx-markdown": "^17.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
