Importing markdown files now works

--- a/angular.json
+++ b/angular.json
@@ -40,6 +40,9 @@
             },
             "ssr": {
               "entry": "server.ts"
+            },
+            "loader": {
+              ".md": "text"
             }
           },
           "configurations": {
